# OSL

./: CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  NUMPY_COMPATIBILITY_FIX.py  Observer-Situation Lattice (OSL) - Implementation and Experimental Validation.md  Observer-Situation Lattice (OSL) Implementation.md  README  README.md  Readme.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_all_experiments.py  run_full_experiments.py  run_quick_test.py  run_single_experiment.py  run_tests.py  setup.py
experiments/: run.py  tom_suite.py
experiments/performance/: rbp_scaling.py
experiments/theory_of_mind/: sally_anne.py
results/: osl_experiment_results.json  rbp_quick_test.json  rbp_scaling_results.json  sally_anne_quick_test.json  sally_anne_result.json  tom_suite_results.json
src/osl/: __init__.py  algorithms.py  baselines.py  belief_base.py  cli.py  core.py  explanation.py  lattice.py  reasoning.py
tests/: __init__.py  conftest.py  legacy_core_unittest.py  test_algorithms.py  test_beliefs.py  test_lattice_properties.py  test_stress.py
