[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osl-framework"
version = "1.0.0"
description = "Observer–Situation Lattice (OSL): a unified formal basis for perspective-aware cognition"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Saad Alqithami", email = "salqithami@bu.edu.sa"},
]
keywords = ["multi-agent systems", "lattice theory", "truth maintenance", "theory of mind", "perspective-aware reasoning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.21.0",
  "scipy>=1.7.0",
  "networkx>=2.6.0",
  "pandas>=1.3.0",
  "matplotlib>=3.5.0",
  "seaborn>=0.11.0",
  "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "ruff>=0.4.0",
  "mypy>=1.0.0",
]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=2.0.0",
]

[project.scripts]
osl = "osl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
